2019-01-17  Jer Noble  <jer.noble@apple.com>

        SDK_VARIANT build destinations should be separate from non-SDK_VARIANT builds
        https://bugs.webkit.org/show_bug.cgi?id=189553

        Reviewed by Tim Horton.

        * Configurations/Base.xcconfig:
        * Configurations/PAL.xcconfig:
        * Configurations/SDKVariant.xcconfig: Added.

2019-01-16  Tim Horton  <timothy_horton@apple.com>

        Unreviewed build fix.

        * pal/spi/ios/UIKitSPI.h:
        I don't even.

2019-01-16  Megan Gardner  <megan_gardner@apple.com>

        Build fix for iOSMac Reveal
        https://bugs.webkit.org/show_bug.cgi?id=193503

        Unreviewed build fix.

        * pal/spi/ios/UIKitSPI.h:

2019-01-15  Megan Gardner  <megan_gardner@apple.com>

        Add Reveal support in iOSMac
        https://bugs.webkit.org/show_bug.cgi?id=193408
        <rdar://problem/47300699>

        Reviewed by Tim Horton.

        Add additional needed SPI.

        * pal/spi/cocoa/RevealSPI.h:

2019-01-15  Tim Horton  <timothy_horton@apple.com>

        Cannot tab out of WKWebView on macOS
        https://bugs.webkit.org/show_bug.cgi?id=161448
        <rdar://problem/28100085>

        Reviewed by Dean Jackson.

        * pal/spi/mac/NSViewSPI.h:
        * pal/spi/mac/NSWindowSPI.h:
        Move some SPI declarations in here from WebKitLegacy.

2019-01-14  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r239901, r239909, r239910, r239912,
        r239913, and r239914.
        https://bugs.webkit.org/show_bug.cgi?id=193407

        These revisions caused an internal failure (Requested by
        Truitt on #webkit).

        Reverted changesets:

        "[Cocoa] Avoid importing directly from subumbrella frameworks"
        https://bugs.webkit.org/show_bug.cgi?id=186016
        https://trac.webkit.org/changeset/239901

        "Tried to fix USE(APPLE_INTERNAL_SDK) builds after r239901."
        https://trac.webkit.org/changeset/239909
