@@ -48,11 +48,6 @@ static NSString* const WebAutomaticDashSubstitutionEnabled = @"WebAutomaticDashS
 static NSString* const WebAutomaticLinkDetectionEnabled = @"WebAutomaticLinkDetectionEnabled";
 static NSString* const WebAutomaticTextReplacementEnabled = @"WebAutomaticTextReplacementEnabled";
 
-// FIXME: this needs to be removed and replaced with NSTextCheckingSuppressInitialCapitalizationKey as soon as
-// rdar://problem/26800924 is fixed.
-
-static NSString* const WebTextCheckingSuppressInitialCapitalizationKey = @"SuppressInitialCapitalization";
-
 namespace WebKit {
 using namespace WebCore;
 
@@ -328,10 +323,12 @@ Vector<TextCheckingResult> TextChecker::checkTextOfParagraph(SpellDocumentTag sp
     RetainPtr<NSString> textString = text.createNSStringWithoutCopying();
     NSDictionary *options = nil;
 #if HAVE(ADVANCED_SPELL_CHECKING)
-    options = @{ NSTextCheckingInsertionPointKey : @(insertionPoint),
-                 WebTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled) };
+    options = @{
+        NSTextCheckingInsertionPointKey : @(insertionPoint),
+        NSTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled)
+    };
 #else
-    options = @{ WebTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled) };
+    options = @{ NSTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled) };
 #endif
     NSArray *incomingResults = [[NSSpellChecker sharedSpellChecker] checkString:textString.get()
                                                                           range:NSMakeRange(0, text.length())
@@ -470,10 +467,12 @@ void TextChecker::getGuessesForWord(SpellDocumentTag spellDocumentTag, const Str
     NSSpellChecker *checker = [NSSpellChecker sharedSpellChecker];
     NSDictionary *options = nil;
 #if HAVE(ADVANCED_SPELL_CHECKING)
-    options = @{ NSTextCheckingInsertionPointKey : @(insertionPoint),
-                 WebTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled) };
+    options = @{
+        NSTextCheckingInsertionPointKey : @(insertionPoint),
+        NSTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled)
+    };
 #else
-    options = @{ WebTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled) };
+    options = @{ NSTextCheckingSuppressInitialCapitalizationKey : @(!initialCapitalizationEnabled) };
 #endif
     if (context.length()) {
         [checker checkString:context range:NSMakeRange(0, context.length()) types:NSTextCheckingTypeOrthography options:options inSpellDocumentWithTag:spellDocumentTag orthography:&orthography wordCount:0];
