@@ -1,3 +1,14 @@
+2019-01-17  Tim Horton  <timothy_horton@apple.com>
+
+        Adopt NSTextCheckingSuppressInitialCapitalizationKey
+        https://bugs.webkit.org/show_bug.cgi?id=193545
+
+        Reviewed by Dean Jackson.
+
+        * UIProcess/mac/TextCheckerMac.mm:
+        (WebKit::TextChecker::checkTextOfParagraph):
+        (WebKit::TextChecker::getGuessesForWord):
+
 2019-01-17  Jer Noble  <jer.noble@apple.com>
 
         SDK_VARIANT build destinations should be separate from non-SDK_VARIANT builds
